[package]
name = "blizzard-engine"
version = "0.1.0"
edition = "2018"
authors = ["Sebastian Doming uez<joburg1035@yahoo.com>"]
description = "Blizzard Game Engine ❄️ is a modular ECS game engine"
readme = "README.md"
homepage = "https://blizzard-engine.web.app"
repository = "https://github.com/SebastianDominguezC/blizzard"
keywords = ["game", "game-engine", "engine"]
categories = ["Game engines", "Game development"]
license = "MIT"

[dependencies]
winit = "0.25.0"
vulkano = "0.26.0"
vulkano-win = "0.26.0"
vulkano-shaders = "0.26.0"

blizzard-id = { path = "../uid", version = "0.1.0" }
blizzard-engine_derive = { path = "./engine_derive", version = "0.1.0" }
