[package]
name = "example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.13"
serde_json = "1.0"
serde_derive = "1.0"

blizzard-server = { path = "../server" }
blizzard-engine = { path = "../engine" }
blizzard-engine_derive = { path = "../engine/engine_derive" }
