[package]
name = "blizzard-server"
version = "0.1.0"
edition = "2018"
authors = ["Sebastian Dominguez<joburg1035@yahoo.com>"]
description = ""
readme = "README.md"
homepage = ""
repository = ""
license = "MIT"
license-file ="LICENSE"
keywords = ["game", "server", "TCP", "multiplayer"]
categories = []

[dependencies]
serde = "1.0.13"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8.4"

blizzard-id = { path = "../uid", version = "0.1" }
blizzard-engine = { path = "../engine", version = "0.1"  }
blizzard-engine_derive = { path = "../engine/engine_derive", version = "0.1" }
