[package]
name = "blizzard-server"
version = "0.1.0"
edition = "2018"
authors = ["Sebastian Doming uez<joburg1035@yahoo.com>"]
description = "Blizzard Server Engine ❄️ is a solution for a TCP multiplayer server"
readme = "README.md"
homepage = "https://blizzard-engine.web.app"
repository = "https://github.com/SebastianDominguezC/blizzard"
keywords = ["server", "games", "multiplayer", "tcp"]
categories = ["Game engines", "Game development", "Network programming"]
license = "MIT"
[dependencies]
serde = "1.0.13"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8.4"

blizzard-id = { path = "../uid", version = "0.1" }
blizzard-engine = { path = "../engine", version = "0.1"  }
blizzard-engine_derive = { path = "../engine/engine_derive", version = "0.1" }
