[package]
name = "blizzard-id"
version = "0.1.0"
edition = "2018"
authors = ["Sebastian Dominguez<joburg1035@yahoo.com>"]
description = "A UID library, originally developed for the Blizzard Game Engine ❄️"
readme = "README.md"
homepage = "https://blizzard-engine.web.app"
repository = "https://github.com/SebastianDominguezC/blizzard"
keywords = ["id", "UID", "auth"]
categories = ["authentication", "uid"]
license = "MIT"

[dependencies]
rand = "0.8.3"
