[package]
name = "blizzard-engine_derive"
version = "0.1.0"
edition = "2018"
authors = ["Sebastian Doming uez<joburg1035@yahoo.com>"]
description = "The macro library developed for the Blizzard Game Engine ❄️"
readme = "README.md"
homepage = "https://blizzard-engine.web.app"
repository = "https://github.com/SebastianDominguezC/blizzard"
keywords = ["macros", "game"]
categories = ["Game engines"]
license = "MIT"

[lib]
crate_type = ["proc-macro"]

[dependencies]
syn = "1.0"
quote = "1.0"